// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="root"
>
  <WithStyles(ForwardRef(Typography))
    className="sum"
    variant="h5"
  >
    <WithStyles(Money)
      currency="USD"
      multiplier={1}
      value={1000}
    />
  </WithStyles(ForwardRef(Typography))>
  <div
    className="secondary"
  >
    <div
      className="group"
      key="daily"
    >
      <WithStyles(Money)
        currency="USD"
        multiplier={1}
        pl={true}
        value={10}
      />
      <WithStyles(Percent)
        pl={true}
        value={0.1}
      />
    </div>
    <div
      className="group"
      key="market"
    >
      <WithStyles(Money)
        currency="USD"
        multiplier={1}
        pl={true}
        value={100}
      />
      <WithStyles(Percent)
        pl={true}
        value={1}
      />
    </div>
  </div>
</div>
`;

exports[`matches snapshot when showing closed 1`] = `
<div
  className="root"
>
  <WithStyles(ForwardRef(Typography))
    className="sum"
    variant="h5"
  >
    <WithStyles(Money)
      currency="USD"
      multiplier={1}
      value={1000}
    />
  </WithStyles(ForwardRef(Typography))>
  <div
    className="secondary"
  >
    <div
      className="group"
      key="closed"
    >
      <WithStyles(Money)
        currency="USD"
        multiplier={1}
        pl={true}
        value={100}
      />
      <WithStyles(Percent)
        pl={true}
        value={1}
      />
    </div>
  </div>
</div>
`;
